--- a/about.html
+++ b/about.html
@@ -51,7 +51,99 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> <!--End of Nav-->
+         <!-- Main -->
+    <main>
+        <div class="row px-0 ">
+            <div class="col-12 position-relative mb-5 ">
+                <a class="btn btn-dark position-absolute position-absolute top-50 start-50 translate-middle btn-lg rounded-0" href="blog.html"
+                    role="button">Read Blog</a>
+                <img src="../assets/index3.jpg" class="img-fluid mt-4 pt-1 px-1">
+            </div>
+        </div>
+        <div class="container">
+            <div class="row mx-auto justify-content-sm-center">
+                <div class="col-12 col-sm-12 col-lg-6 text-center" id="TheStory">
+                    <h1 class="display-1 mt-4font-weight-bold "><strong>The Story</h1></strong>
+                </div>
+                <div class="col-md-6 col-sm-12 col-12 text-center">
+                    <img src="../assets/h1.jpg" class="img-fluid mt-4 pt-3 px-2">
+                </div>
+            </div>
+            <div class="row mx-auto justify-content-sm-center " >
+                <div class="col-12 col-sm-12 col-lg-6 order-lg-1 text-center" id="aYoung"> <!--order 1-->
+                    <span class="display-1 mt-4 "><strong>of a young</span></strong>
+                </div>
+                <div class="col-md-6 col-sm-12 col-12 order-lg-6 text-center "  id="class2"> <!--order-6-->
+                    <img src="../assets/h2.jpg" class="img-fluid mt-4 pt-3 px-2">
+                </div>
+            </div>
+            <div class="row mx-auto justify-content-sm-center">
+                <div class="col-12 col-sm-12 col-lg-6 text-center" id="momsLife">
+                    <span class="display-1 mt-4"><strong>Developer</span></strong>
+                </div>
+                <div class="col-md-6 col-sm-12 col-12 text-center">
+                    <img src="../assets/h3.jpg" class="img-fluid mt-4 pt-3 px-2">
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-lg-6 text-center px-3 text-justify" id="diaper">
+                <span>Sleepless nights and endless creation of websites may be what many 
+                    associate with developing of it.But developing is so much more than that, and so much better.</span><br>
+            </div><br>
+            <div class="button">
+                <button type="button" class="btn btn-dark btn-sm text-left btn-lg ml-3" id="ReadMe">Read More</button>
+            </div>
+            <div class="row mx-auto">
+                <div class="col-md-12 sm text-center pt-5 bg-blue">
+                  <h1 class="display-1">Latest Posts</h1>
+                </div>
+            </div>
+            <div class="container-fluid bg-blue" id="containerFluid">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4 ">
+                    <img src="../assets/lp1.jpg" class="img-fluid mt-4 pt-3 px-2">
+                    <p class="display-6 mt-4 col-md-6 sm  text-left"><strong>Best Reads For First Time Developer </p></strong>
+                    <small class="text-muted px-2" >4/16/2021 . 1 min.read</small>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                    <img src="../assets/lp2.jpg" class="img-fluid mt-4 pt-3 px-2">
+                    <p class="display-6 mt-4 col-md-6 sm  text-left"><strong>5 Ways For You </p></strong>
+                    <small class="text-muted px-2" >4/16/2021 . 1 min.read</small>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                    <img src="../assets/lp3.jpg" class="img-fluid mt-4 pt-3 px-2">
+                    <p class="display-6 mt-4 col-md-6 sm  text-left"><strong>How It Really Works</p></strong>
+                    <small class="text-muted px-2" >4/16/2021 . 1 min.read</small>
+                    </div>
+                    <div class="button pt-5 my-5" style="text-align-last:center">
+                        <button type="button" class="btn btn-dark text-center rounded-0 btn-lg">Read More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="containerFluid">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 px-1">
+                        <img src="../assets/lp4.jpg" class="img-fluid mt-4 pt-3 px-2">
+                    </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 sm text-center pt-5">
+                  <h1 class="display-1">LET'S <br> CHAT!</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 sm text-center pt-5 ">
+                  <h5 style="font-family: arial;" >Got a question, comment or a collaboration idea? Great, let us hear it 
+                    – we’re <BR> all about community and two-way communication here at Elisha. </h5>
+                </div>
+            </div>
+            <div class="button pt-5" style="text-align-last:center">
+                <button type="button" class="btn btn-dark text-center rounded-0 btn-lg" href="../html/contact.html">CONTACT</button>
+            </div>
+        </div>
+    </main>
+
+    <!--Footer-->
         <div class="container-fluid">
         <footer>
             <div class="row px-0">
