update about file

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- navigation -->
-    <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img style="border-radius:50%;" src="../assets/kodego_logo.png" width=55px height=50px
                     alt=""></a>
@@ -56,20 +56,35 @@
     <main>
         <div class="row px-0 ">
             <div class="col-12 position-relative mb-5 ">
-                <a class="btn btn-dark position-absolute position-absolute top-50 start-50 translate-middle btn-lg rounded-0" href="blog.html"
-                    role="button">Read Blog</a>
-                <img src="../assets/index3.jpg" class="img-fluid mt-4 pt-1 px-1">
+                <H1 class="position-absolute position-absolute top-50 start-50 translate-middle btn-lg rounded-0" href="blog.html"
+                    style="color: white; font-size: 60px">ABOUT</H1>
+                <img src="assets/Banner.jpg" class="img-fluid mt-4 pt-1 px-1">
             </div>
         </div>
         <div class="container">
             <div class="row mx-auto justify-content-sm-center">
                 <div class="col-12 col-sm-12 col-lg-6 text-center" id="TheStory">
-                    <h1 class="display-1 mt-4font-weight-bold "><strong>The Story</h1></strong>
+                    <h1 class="display-1 mt-4font-weight-bold "><strong>Our Story</h1></strong>
+                    <div class="col-12 col-sm-12 col-lg-6 text-center px-3 text-justify" id="amplistory">
+                        <span class="text-center">Ampli.fy is built during the boot camp training of the developers under the Cadetship Program of Asticom Year 2022. 
+                            This website's goal is to provide a list of bands in the Philippines, as well as their songs and the dates of their upcoming shows or concerts.
+                             This concept was the result of the brainstorming of the developers who did their research on what the best concept that they could provide to others was.</span><br>
+                    </div><br>
                 </div>
                 <div class="col-md-6 col-sm-12 col-12 text-center">
-                    <img src="../assets/h1.jpg" class="img-fluid mt-4 pt-3 px-2">
+                    <img src="assets/storybanner.jpg" class="img-fluid mt-4 pt-3 px-2">
+                </div>
+            </div><br>
+            <!--DIVIDER-->
+            <div class="container">
+                <div class="row mx-auto bg-dark">
+                  <div class="col"> DITO
+                  </div>
                 </div>
             </div>
+            <!--End Divider-->
+            <br>
+            <!-- Developers-->
             <div class="row mx-auto justify-content-sm-center " >
                 <div class="col-12 col-sm-12 col-lg-6 order-lg-1 text-center" id="aYoung"> <!--order 1-->
                     <span class="display-1 mt-4 "><strong>of a young</span></strong>
