--- a/about.html
+++ b/about.html
@@ -84,13 +84,13 @@
             </div>
             <!--End Divider-->
             <br>
-            <!-- Developers-->
+            <!-- Developer-->
             <div class="row mx-auto justify-content-sm-center " >
                 <div class="col-12 col-sm-12 col-lg-6 order-lg-1 text-center" id="aYoung"> <!--order 1-->
                     <span class="display-1 mt-4 "><strong>of a young</span></strong>
                 </div>
                 <div class="col-md-6 col-sm-12 col-12 order-lg-6 text-center "  id="class2"> <!--order-6-->
-                    <img src="../assets/h2.jpg" class="img-fluid mt-4 pt-3 px-2">
+                    <img src="assets/d1.jpg" class="img-fluid mt-4 pt-3 px-2">
                 </div>
             </div>
             <div class="row mx-auto justify-content-sm-center">
