--- a/about.html
+++ b/about.html
@@ -84,23 +84,35 @@
             </div>
             <!--End Divider-->
             <br>
+            <!--<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+  </div>
+</div>-->
             <!-- Developer-->
             <div class="row mx-auto justify-content-sm-center " >
-                <div class="col-12 col-sm-12 col-lg-6 order-lg-1 text-center" id="aYoung"> <!--order 1-->
-                    <span class="display-1 mt-4 "><strong>of a young</span></strong>
+                <div class="col-12 col-sm-12 col-lg-3 text-center" id="aYoung"> <!--order 1-->
+                    <img src="assets/d1.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded-0">
+                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Best Reads For First Time Web Developer </span></strong>
+                        <br><small class="text-muted text-justify text-left px-3" >4/16/2021 . 1 min.read</small>
                 </div>
-                <div class="col-md-6 col-sm-12 col-12 order-lg-6 text-center "  id="class2"> <!--order-6-->
-                    <img src="assets/d1.jpg" class="img-fluid mt-4 pt-3 px-2">
+                <div class="col-md-6 col-sm-12 col-12 col-lg-3 text-center "  id="class2"> <!--order-6-->
+                    <img src="assets/d2.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded">
+                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Best Reads For First Time Web Developer </span></strong>
+                        <br><small class="text-muted text-justify text-left px-3" >4/16/2021 . 1 min.read</small>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-3 text-center" id="momsLife">
+                    <img src="assets/d3.jpg" class="img-fluid mt-4 pt-3 px-2 rounded">
+                </div>
+                <div class="col-md-6 col-sm-12 col-12 col-lg-3 text-center">
+                    <img src="assets/d4.jpg" class="img-fluid mt-4 pt-3 px-2 rounded">
                 </div>
             </div>
-            <div class="row mx-auto justify-content-sm-center">
-                <div class="col-12 col-sm-12 col-lg-6 text-center" id="momsLife">
-                    <span class="display-1 mt-4"><strong>Developer</span></strong>
-                </div>
-                <div class="col-md-6 col-sm-12 col-12 text-center">
-                    <img src="../assets/h3.jpg" class="img-fluid mt-4 pt-3 px-2">
-                </div>
-            </div>
+
+            <!--en dev-->
             <div class="col-12 col-sm-12 col-lg-6 text-center px-3 text-justify" id="diaper">
                 <span>Sleepless nights and endless creation of websites may be what many 
                     associate with developing of it.But developing is so much more than that, and so much better.</span><br>
