--- a/about.html
+++ b/about.html
@@ -94,21 +94,20 @@
 </div>-->
             <!-- Developer-->
             <div class="row mx-auto justify-content-sm-center " >
-                <div class="col-12 col-sm-12 col-lg-3 text-center" id="aYoung"> <!--order 1-->
+                <div class="col-12 col-sm-12 col-lg-4 text-center" id="aYoung"> <!--order 1-->
                     <img src="assets/d1.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded-0">
-                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Best Reads For First Time Web Developer </span></strong>
-                        <br><small class="text-muted text-justify text-left px-3" >4/16/2021 . 1 min.read</small>
+                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Mendrix</span></strong>
+                        <br><small class="text-muted text-justify text-left px-3" >Developer</small>
                 </div>
-                <div class="col-md-6 col-sm-12 col-12 col-lg-3 text-center "  id="class2"> <!--order-6-->
-                    <img src="assets/d2.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded">
-                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Best Reads For First Time Web Developer </span></strong>
-                        <br><small class="text-muted text-justify text-left px-3" >4/16/2021 . 1 min.read</small>
+                <div class="col-md-6 col-sm-12 col-12 col-lg-4 text-center "  id="class2"> <!--order-6-->
+                    <img src="assets/d3.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded">
+                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Lyca</span></strong>
+                        <br><small class="text-muted text-justify text-left px-3" >Developer</small>
                 </div>
-                <div class="col-12 col-sm-12 col-lg-3 text-center" id="momsLife">
-                    <img src="assets/d3.jpg" class="img-fluid mt-4 pt-3 px-2 rounded">
-                </div>
-                <div class="col-md-6 col-sm-12 col-12 col-lg-3 text-center">
-                    <img src="assets/d4.jpg" class="img-fluid mt-4 pt-3 px-2 rounded">
+                <div class="col-12 col-sm-12 col-lg-4 text-center" id="momsLife">
+                    <img src="assets/d2.jpg" class="img-fluid mt-4 pt-3 px-2 rounded">
+                    <span class="display-6 mt-4 col-md-6 sm  text-left px-2"><strong>Mike</span></strong>
+                        <br><small class="text-muted text-justify text-left px-3" >Developer</small>
                 </div>
             </div>
 
