--- a/booking.html
+++ b/booking.html
@@ -54,7 +54,9 @@
         </div>
     </nav>
     <main>
-        
+        <div class="container">
+            
+        </div>
     </main>
     <footer>
         <script>
