new content added
index about part

--- a/footer.html
+++ b/footer.html
@@ -4,16 +4,18 @@
         <p>Don't miss out on exclusive behind-the-scenes access, early demos, live streams and other benefits by subscribing to our newsletter.</p>
     </div>
     <div class="px-4 pt-md-2">
-        <div class="mb-3">
+        <div class="mb-3 justify-content-sm-center">
+            <div class="">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email address">
-          </div>
-          <button type="submit" class="btn btn-outline-dark">Submit</button>
+            </div>
+            </div>
+          <button type="submit" class="btn btn-outline-light">Submit</button>
     </div>
     </div>
     <hr>
     <div class="d-flex justify-content-center justify-content-md-end">
-        <div class="">
+        <div class="flex">
             <i class="bi bi-twitter"></i>
             <i class="bi bi-facebook"></i>
             <i class="bi bi-instagram"></i>
