--- a/bands.html
+++ b/bands.html
@@ -7,7 +7,7 @@
     <title>ampli.fy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
@@ -53,6 +53,139 @@
             </div>
         </div>
     </nav>
+    <!--banner-->
+    <main style="background-color:white">
+        <div class="row px-0 ">
+            <div class="col-12 position-relative mb-5 ">
+                <H1 class="position-absolute position-absolute top-50 start-50 translate-middle btn-lg rounded-0" href="blog.html"
+                    style="color: white; font-size: 60px">BANDS</H1>
+                <img src="assets/banner2.jpg" class="img-fluid mt-4 pt-1 px-1 ">
+            </div>
+        </div>
+        <div container-fluid>
+            <h1 class="display-1 display-font-sizes: 4.5rem text-center">OPM BANDS</h1>
+        </div>
+    <!--carousel-->
+    <script type="text/javascript" 
+        src="//code.jquery.com/jquery-1.9.1.js">
+    </script>
+        <link rel="stylesheet" type="text/css" href="/css/result-light.css">
+    <script type="text/javascript" 
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
+    </script>
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <!-- create a bootstrap card in a container-->
+    <div class="container">
+        <!--Bootstrap card with slider class-->
+        <div id="carousel-demo" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner d-flex justify-content-lg-center">
+                <div class="item">
+                    <img src="assets/BenAndBen.jpg">
+                </div>
+                <div class="item">
+                    <img src="assets/spongecola.jpg" srcset="">
+                </div>
+                <div class="item">
+                    <img src="assets/deliryo.jpg">
+                </div>
+                <div class="item active">
+                    <img src="assets/ssanctuary.jpg">
+                </div>
+            </div>
+            <!--slider control for card-->
+            <a class="left carousel-control"
+               href="#carousel-demo"
+               data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left">
+              </span>
+            </a>
+            <a class="right carousel-control" 
+               href="#carousel-demo" 
+               data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right">
+              </span>
+            </a>
+        </div>
+    </div><br>
+    <!--end carousel-->
+     <!--DIVIDER-->
+     <div class="container py-5">
+        <div class="row mx-auto" style="background-color: #112031;">
+          <div class="col"><h1></h1>
+          </div>
+        </div>
+    </div>
+    <!--End Divider-->
+    <br>
+    <!--embed-->
+    <div class="container">
+        <div class="row">
+         <div class="col-md-4">
+          <div class="card baseBlock">
+         <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15fb4f80579%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15fb4f80579%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22118.0859375%22%20y%3D%2297.35%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+         <div class="card-body">
+           <h4 class="card-title">Silent Sanctuary</h4>
+           <p class="card-text">Silent Sanctuary is a 5-piece Filipino rock band that was formed in Metro Manila, Philippines in 2001. Five studio albums have been released by the band throughout its career.</p>
+           <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+       </div>
+         </div>
+            <div class="col-md-4">
+          <div class="card baseBlock">
+         <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180" style="height: 180px; width: 100%; display: block;" src="assets/bb.jpg" data-holder-rendered="true">
+         <div class="card-body">
+           <h4 class="card-title">Ben And Ben</h4>
+           <p class="card-text">Ben&Ben, formerly known as The Benjamins, is a 9-members band under Sony Music Philippines. 
+            They officially debuted in late 2016 with their first EP Ben&Ben.</p>
+           <a href="#" class="btn btn-primary">Read More</a>
+         </div>
+       </div>
+         </div>
+            <div class="col-md-4">
+          <div class="card baseBlock">
+         <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15fb4f80579%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15fb4f80579%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22118.0859375%22%20y%3D%2297.35%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+         <div class="card-body">
+           <h4 class="card-title">Spongecola</h4>
+           <p class="card-text">Sponge Cola is a Philippine pop-rock band that has become very successful, with multiple hit singles and top-selling albums. They are currently one of the most successful and longest-lived veteran bands that are actively recording and touring.</p>
+           <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+       </div>
+         </div>
+            <div class="col-md-4">
+          <div class="card baseBlock">
+         <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15fb4f80579%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15fb4f80579%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22118.0859375%22%20y%3D%2297.35%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+         <div class="card-body">
+           <h4 class="card-title">Card title</h4>
+           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+       </div>
+         </div>
+            <div class="col-md-4">
+          <div class="card baseBlock">
+         <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15fb4f80579%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15fb4f80579%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22118.0859375%22%20y%3D%2297.35%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+         <div class="card-body">
+           <h4 class="card-title">Card title</h4>
+           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+       </div>
+         </div>
+            <div class="col-md-4">
+          <div class="card baseBlock">
+         <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15fb4f80579%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15fb4f80579%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22118.0859375%22%20y%3D%2297.35%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+         <div class="card-body">
+           <h4 class="card-title">Card title</h4>
+           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+       </div>
+         </div>
+        </div>
+       </div>
+      <!--end embed-->
     <footer>
         <script>
             $("footer").load("footer.html");
