footer and cp version
adjustments in postioning of footer and the whole index.html for cp version

--- a/index.html
+++ b/index.html
@@ -53,22 +53,21 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0 ctnText">
         <div style="position: relative;">
             <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100" alt="">
-            <div class="ps-4 showBanner bannerText">
+            <div class="pt-2 ps-md-4 showBanner bannerText">
                  <h1>Music<span> conveys</span></h1> 
-                 <h1>Strength<span> and </span>Love</h1><br>
+                 <h1>Strength<span> and </span>Love</h1>
                  <button type="submit" class="btn btn-lg-lg btn-outline-light">See More</button>
              </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-5 p-4 text-justify">
-            <!-- <h3>our story</h3>  -->
+            <div class="col-lg-5 p-4 ctnText">
             <h2>Music is</h2>
-                <div class="d-flex wrapper">
+                <div class="d-flex wrapper justify-content-center justify-content-lg-start">
                         <div class="words">
                             <span class="spanAdjectives">Mellow</span>
                             <span class="spanAdjectives">Melodious</span>
@@ -81,7 +80,7 @@
                 <button type="submit" class="btn btn-lg-lg btn-outline-dark">LEARN MORE</button>
             </div>
             <div class="col-lg-7 p-4">
-                <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100" alt="">
+                <img src="assets/banner.jpg" class="img-fluid w-100" alt="">
             </div>
         </div>
     </div>
