--- a/footer.html
+++ b/footer.html
@@ -1,24 +1,31 @@
 <div class="d-flex flex-wrap">
-    <div class="px-4 pt-2" style="max-width: 500px;">
+    <div class="px-4 pt-2 ms-sm-5 ms-lg-0" style="max-width: 500px;">
         <h3>Subscribe</h3>
         <p>Don't miss out on exclusive behind-the-scenes access, early demos, live streams and other benefits by subscribing to our newsletter.</p>
     </div>
     <div class="px-4 pt-md-2">
         <div class="mb-3 justify-content-sm-center">
-            <div class="">
+            <div class="ms-sm-5 ms-lg-0">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email address">
-            </div>
-            </div>
-          <button type="submit" class="btn btn-outline-light">Submit</button>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email address"><br>
+            <button type="submit" class="btn btn-outline-light">Submit</button>
+        </div>
+        </div>
     </div>
     </div>
     <hr>
-    <div class="d-flex justify-content-center justify-content-md-end">
-        <div class="flex">
-            <i class="bi bi-twitter"></i>
-            <i class="bi bi-facebook"></i>
-            <i class="bi bi-instagram"></i>
+    <div class="d-flex flex-column flex-sm-row pb-3 px-4 ">
+        <div class="d-flex flex-fill order-2 order-sm-1 justify-content-center justify-content-md-start">
+            <label>powered by <a href="https://kodego.ph/" style="color:#D4ECDD; text-decoration: none;">Kodego.ph</a></label>
         </div>
+        <div class="d-flex flex-fill order-1 order-sm-2 justify-content-center">
+            <img src="assets/amplifylogo2.png" width=150px height=auto alt="">
+        </div>
+        <div class=" d-flex flex-fill order-3 justify-content-center justify-content-md-end">
+            <i class="bi bi-twitter m-2"></i>
+            <i class="bi bi-facebook m-2"></i>
+            <i class="bi bi-instagram m-2"></i>
+        </div>
+        
     </div>
 </div>
