fixed html link

--- a/reserve.html
+++ b/reserve.html
@@ -135,7 +135,7 @@
 
                 sessionStorage.setItem("info",JSON.stringify(list));
                 
-                window.location.href= "/booking.html";
+                window.location.href= "booking.html";
             });
         });
     </script>
