--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
             <div class="ms-sm-5 ms-lg-0">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email address"><br>
-            <button type="submit" class="btn btn-outline-light">Submit</button>
+            <button type="submit" class="btn rounded-0 btn-outline-light">Submit</button>
         </div>
         </div>
     </div>
