--- a/reserve.html
+++ b/reserve.html
@@ -56,7 +56,7 @@
 
     <!-- banner -->
     <section  id="reserve" class="container-fluid px-0 w-100">
-        <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="unused_assets/liam2.jpg" alt="">
+        <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets/liam2.jpg" alt="">
         <div id="banner-saying">
             <div id="absolute">
                 <span><h1>Be <span class="bigus">ONE</span> with the <span class="bigus">CROWD</span></h1></span>
