--- a/bands.html
+++ b/bands.html
@@ -62,7 +62,8 @@
     <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets/banner.jpg" alt="">
     <div id="banner-saying">
         <div id="absolute">
-            <span><h1>Music <span class="bigus">that</span> listens to <span class="bigus">YOU</span></h1></span>
+            <span><h1><span class="bigus">Music </span><span class="bigus">that</span> </h1></span>
+                    <span><h1><span class="bigus">Listens </span><span class="bigus">to you</span></h1></span><br>
            
         </div>
     </div>    
